[package]
name = "ncm2mp3"
version = "1.0.2"
description = "A Tauri application to convert NCM files to MP3 format"
authors = ["you"]
edition = "2021"

# 移除 [lib] 部分，改为 [bin]
[[bin]]
name = "ncm2mp3"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["api-all"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
base64 = "0.21"
aes = "0.8"
hex = "0.4"
cbc = "0.1"

# 添加必要的依赖
[dependencies.aes-gcm]
version = "0.10"
features = ["aes"]

[dependencies.block-modes]
version = "0.10"

[dependencies.cipher]
version = "0.4"
features = ["std"]
